--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": " concurrently \" tsc -w \" \"nodemon dist/app.js\"",
     "start": "node dist/app.js",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "overbuild": "webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -25,10 +26,16 @@
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.3"
+    "babel-loader": "^8.0.5",
+    "typescript": "^4.7.3",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
